# screensift

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: annotated_pose_panel.yml  docking.yml  inspection.yml  ligand_baseline.yml  metrics.yml  objective_2d_audit.yml  paths.yml  pose_inspection.yml  pose_panel.yml  receptors.yml  screening.yml  targets.yml
example/mapk1/: README.md  full_lit_pcba_pipeline.yml  full_lit_pcba_screening.yml  lit_pcba_full_ligands.csv  lit_pcba_full_schema.yml  mapk1_docking_boxes.csv  mapk1_phase1_score_population.csv  pipeline.yml  run_example.py  schema.yml
example/mapk1/expected_outputs/: README.md  candidate_pose_qc.csv  gnina_rescoring_validation.csv  mapk1_candidates.csv  native_redocking.csv
src/screensift/: __init__.py  api.py  cli.py  pipeline.py
src/screensift/common/: __init__.py  chemistry.py  external.py  io.py  logging_utils.py
src/screensift/curation/: __init__.py  adapt_dataset_schema.py  audit_lit_pcba.py  download_lit_pcba.py  leakage_audit.py  make_screening_splits.py  standardize_ligands.py
src/screensift/docking/: __init__.py  audit_unidock_scores.py  collect_docking_inputs.py  parse_unidock_scores.py  run_unidock.py
src/screensift/ligands/: __init__.py  generate_3d_conformers.py  prepare_pdbqt_ligands.py
src/screensift/metrics/: __init__.py  anomaly_utils.py  enrichment.py  evaluate_ligand_baseline.py  evaluate_objective_2d_audit.py  evaluate_phase1_scores.py  ligand_baseline.py  objective_2d_baselines.py  rank_fusion.py  scaffold_leakage.py  score_qc.py  structure_added_value.py
src/screensift/receptors/: __init__.py  define_docking_boxes.py  ensemble_variability.py  fetch_pdbs.py  prepare_receptors.py  select_receptors.py
src/screensift/rescoring/: __init__.py  build_gnina_all_valid_input.py  parse_gnina_scores.py  run_gnina_rescore.py  select_gnina_subset.py
tests/: test_3d_generation.py  test_annotated_pose_panels.py  test_anomaly_utils.py  test_candidate_triage.py  test_cnn_vs_score.py  test_dataset_schema_adapter.py  test_docking_inputs.py  test_enrichment_metrics.py  test_environment.py  test_external_tools.py  test_final_pymol_review.py  test_gnina_all_valid_input.py  test_gnina_parser.py  test_gnina_subset_selection.py  test_inspection_set.py  test_io.py  test_ligand_baseline.py  test_ligand_standardization.py  test_manual_pose_verdict_template.py  test_native_ligand_sanity.py  test_objective_2d_baselines.py  test_pipeline_config.py  test_pose_inspection.py  test_pose_io.py  test_pose_locator.py  test_pose_panel_scripts.py  test_pose_review_panels.py  test_pre_step8_cleanup.py  test_public_api.py  test_rank_fusion.py  test_receptor_box.py  test_receptor_ensemble_variability.py  test_rmsd_utils.py  test_safe_filenames.py  test_scaffold_leakage.py  test_score_qc.py  test_screening_splits.py  test_structure_added_value.py  test_unidock_score_parser.py  test_unidock_score_qc.py
workflows/: Snakefile
(+48 files in other folders)
